--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,15 @@
-<h1>Welcome to Volunteer Connect!</h1>
-<p>Find events near you by clicking here.</p>
+<!DOCTYPE html>
+<html lang = "en">
+  
+  <head>
+    <title>Volunteer Home</title>
+    <meta charset = "utf-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
+  </head>
+
+<div class="container p-5 my-5 bg-primary text-white">
+  <h1>Welcome to Volunteer Connect</h1>
+  <p>Click here to get started.</p> 
+</div>
+</html>
