--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,15 +1,28 @@
+<!DOCTYPE html>
+<html lang = "en">
+  
+  <head>
+    <title>Volunteer Home</title>
+    <meta charset = "utf-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
+  </head>
+  
 <p id="notice"><%= notice %></p>
+
+  
+<div class="container mt-3">
 
 <h1>Events</h1>
 
-<table>
+<table class = "table">
   <thead>
     <tr>
       <th>Name</th>
-      <th>Description</th>
+<!--       <th>Description</th> -->
       <th>Date</th>
       <th>Time</th>
-      <th>Link</th>
+<!--       <th>Link</th> -->
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,10 +31,10 @@
     <% @events.each do |event| %>
       <tr>
         <td><%= event.name %></td>
-        <td><%= event.description %></td>
+<!--         <td><%= event.description %></td> -->
         <td><%= event.date %></td>
         <td><%= event.time %></td>
-        <td><%= event.link %></td>
+<!--         <td><%= event.link %></td> -->
         <td><%= link_to 'Show', event %></td>
         <td><%= link_to 'Edit', edit_event_path(event) %></td>
         <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -29,7 +42,12 @@
     <% end %>
   </tbody>
 </table>
-
+  <%= link_to 'New Event', new_event_path %>
+  <br>
+  <br>
+  <h3><%= link_to  "Go Home", home_path %></h3>
+</div>
+  
 <br>
 
-<%= link_to 'New Event', new_event_path %>
+
