--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -1,15 +1,27 @@
+<!DOCTYPE html>
+<html lang = "en">
+  
+  <head>
+    <title>Volunteer Home</title>
+    <meta charset = "utf-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
+  </head>
+
 <p id="notice"><%= notice %></p>
 
-<h1>Organizations</h1>
+<div class="container mt-3">
+<h1>Organizations </h1>
 
-<table>
+
+<table class = "table">
   <thead>
     <tr>
       <th>Name</th>
-      <th>Address</th>
-      <th>Web address</th>
-      <th>Contact phone</th>
-      <th>Contact email</th>
+<!--       <th>Address</th> -->
+<!--       <th>Web address</th> -->
+<!--       <th>Contact phone</th> -->
+<!--       <th>Contact email</th> -->
       <th>Category</th>
       <th colspan="3"></th>
     </tr>
@@ -19,10 +31,10 @@
     <% @organizations.each do |organization| %>
       <tr>
         <td><%= organization.name %></td>
-        <td><%= organization.address %></td>
-        <td><%= organization.web_address %></td>
-        <td><%= organization.contact_phone %></td>
-        <td><%= organization.contact_email %></td>
+<!--         <td><%= organization.address %></td> -->
+<!--         <td><%= organization.web_address %></td> -->
+<!--         <td><%= organization.contact_phone %></td> -->
+<!--         <td><%= organization.contact_email %></td> -->
         <td><%= organization.category %></td>
         <td><%= link_to 'Show', organization %></td>
         <td><%= link_to 'Edit', edit_organization_path(organization) %></td>
@@ -35,3 +47,7 @@
 <br>
 
 <%= link_to 'New Organization', new_organization_path %>
+  <br>
+  <br>
+<h3><%= link_to "Go Home", home_path %></h3>
+</div>
