--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,6 +1,18 @@
+<!DOCTYPE html>
+<html lang = "en">
+  
+  <head>
+    <title>Edit Event</title>
+    <meta charset = "utf-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
+  </head>
+  
+<div class="container p-5 my-5 bg-light text-dark">
 <h1>Editing Event</h1>
 
 <%= render 'form', event: @event %>
 
 <%= link_to 'Show', @event %> |
 <%= link_to 'Back', events_path %>
+  </div>
