--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -2,7 +2,7 @@
 <html lang = "en">
   
   <head>
-    <title>Volunteer Home</title>
+    <title>Organizations</title>
     <meta charset = "utf-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
@@ -10,12 +10,12 @@
 
 <p id="notice"><%= notice %></p>
 
-<div class="container mt-3">
+<div class="container mt-3 p-5 my-5">
 <h1>Organizations </h1>
 
 
 <table class = "table">
-  <thead>
+  <thead class = "table-secondary">
     <tr>
       <th>Name</th>
 <!--       <th>Address</th> -->
