--- a/app/views/organizations/new.html.erb
+++ b/app/views/organizations/new.html.erb
@@ -1,5 +1,17 @@
+<!DOCTYPE html>
+<html lang = "en">
+  
+  <head>
+    <title>New Organization</title>
+    <meta charset = "utf-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
+  </head>
+  
+<div class="container p-5 my-5 bg-light text-dark">
 <h1>New Organization</h1>
 
 <%= render 'form', organization: @organization %>
 
 <%= link_to 'Back', organizations_path %>
+</div>
