Fixed links in show views

--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -23,7 +23,7 @@
 
 <p>
   <strong>Web address:</strong>
-  <%= @organization.web_address %>
+  <%= link_to "Explore #{@organization.name}", "#{@organization.web_address}" %>
 </p>
 
 <p>
