--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -34,7 +34,7 @@
 
 <p>
   <strong>Link:</strong>
-  <%= @event.link %>
+  <%= link_to 'Register Here', "#{@event.link}" %>
 </p>
 
 <%= link_to 'Edit', edit_event_path(@event) %> |
