Updated validation and Bootstrap for Organizations

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Volunteer</title>
+    <title>One Volunteer</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -10,6 +10,7 @@
   </head>
 
   <body>
+    <a href= "https://spark-small-3000.codio.io/home/index" type="button" class="btn btn-primary"> Go Home</a>
     <%= yield %>
   </body>
 </html>
