Fixed form formatting

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,17 +9,28 @@
   </head>
 
 <div class="container p-5 my-5 bg-light text-dark">
-  <h1>Welcome to Volunteer Connect</h1>
-  <div class="row">
+  <h1 class="text-center"> Volunteer Connect</h1>
+<!--   <div class="row">
     <div class="col">
-      <a href = "https://spark-small-3000.codio.io/events" type = "button" class = "btn btn-primary">Find and Event</a>
     </div>
     <div class="col">
+    </div>
+    <div class="col text-center">
+      <a href = "https://spark-small-3000.codio.io/events" type = "button" class = "btn btn-primary">Find an Event</a>
+    </div>
+    <div class="col text-center">
       <a href = "https://spark-small-3000.codio.io/organizations" type = "button" class = "btn btn-primary">Browse Organizations</a>
     </div>
-  </div>
-  <p><%= link_to 'Find an Event', events_path%></p>
-  <p><%= link_to 'Browse Organizations', organizations_path%></p>
+    <div class="col">
+    </div>
+    <div class="col">
+    </div>
+  </div> -->
+  <div class="text-center">
+    <a href = "https://spark-small-3000.codio.io/events" type = "button" class = "btn btn-primary p-3 mr-5">Find an Event</a>
+    <a href = "https://spark-small-3000.codio.io/organizations" type = "button" class = "btn btn-primary p-3 ml-5">Browse Organizations</a>
+    </div>
+  
   
 </div>
 </html>
