--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,7 +1,8 @@
 <%= form_with(model: event, local: true) do |form| %>
   <% if event.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(event.errors.count, "error") %> prohibited this event from being saved:</h2>
+    <div id="error_explanation" class="alert alert-danger alert-dismissible" >
+      <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+      <!--<h2><%= pluralize(event.errors.count, "error") %> in your input:</h2>-->
 
       <ul>
         <% event.errors.full_messages.each do |message| %>
@@ -10,33 +11,70 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
+  <div class="field row my-2 pt-2" >
+    <div class="col-sm-2">
+      <%= form.label :name %>
+    </div>
+    <div class="col-sm-10">
+      <%= form.text_field :name %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= form.label :description %>
-    <%= form.text_field :description %>
+  <div class="field row my-2 pt-2" >
+    <div class="col-sm-2">
+      <%= form.label :description %>
+    </div>
+    <div class="col-sm-10">
+      <%= form.text_area :description, :size => "30x5" %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= form.label :date %>
-    <%= form.text_field :date %>
+  <div class="field row my-2 pt-2" >
+    <div class="col-sm-2">
+      <%= form.label :date %>
+      <%= form.label :date, "(MM/DD/YYYY)" %>
+    </div>
+    <div class="col-sm-10">
+      <%= form.text_field :date %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= form.label :time %>
-    <%= form.text_field :time %>
+  <div class="field row my-2 pt-2" >
+    <div class="col-sm-2">
+      <%= form.label :start_time %>
+      <%= form.label :start_time, "(XX:XX)" %>
+    </div>
+    <div class="col-sm-10">
+      <%= form.text_field :start_time %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= form.label :link %>
-    <%= form.text_field :link %>
+  <div class="field row my-2 pt-2" >
+    <div class="col-sm-2">
+      <%= form.label :end_time %>
+      <%= form.label :end_time, "(XX:XX)" %>
+    </div>
+    <div class="col-sm-10">
+      <%= form.text_field :end_time %>
+    </div>
   </div>
 
-  <div class="actions">
-    <%= form.submit %>
+  <div class="field row my-2 pt-2" >
+    <div class="col-sm-2">
+      <%= form.label :link %>
+    </div>
+    <div class="col-sm-10">
+      <%= form.text_field :link %>
+    </div>
   </div>
+
+  <div clas
+       s="field row my-2 pt-2" >
+    <div class="col-sm-2">
+      <%= form.submit %>
+    </div>
+
+  </div>
+
+
 <% end %>
