--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -2,7 +2,7 @@
 <html lang = "en">
   
   <head>
-    <title>Edit Event</title>
+    <title>Edit Events</title>
     <meta charset = "utf-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
@@ -15,4 +15,3 @@
 
 <%= link_to 'Show', @event %> |
 <%= link_to 'Back', events_path %>
-  </div>
