--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -2,14 +2,13 @@
 <html lang = "en">
   
   <head>
-    <title>New Event</title>
+    <title>New Organization</title>
     <meta charset = "utf-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   
 <div class="container p-5 my-5 bg-light text-dark">
-  
 <h1>New Event</h1>
 
 <%= render 'form', event: @event %>
