--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,15 +1,3 @@
-<!DOCTYPE html>
-<html lang = "en">
-  
-  <head>
-    <title>Event Info</title>
-    <meta charset = "utf-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
-  </head>
-  
-<div class="container p-5 my-5 bg-light text-dark">
-
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -28,15 +16,19 @@
 </p>
 
 <p>
-  <strong>Time:</strong>
-  <%= @event.time %>
+  <strong>Start time:</strong>
+  <%= @event.start_time %>
+</p>
+
+<p>
+  <strong>End time:</strong>
+  <%= @event.end_time %>
 </p>
 
 <p>
   <strong>Link:</strong>
-  <%= link_to 'Register Here', "#{@event.link}" %>
+  <%= @event.link %>
 </p>
 
 <%= link_to 'Edit', edit_event_path(@event) %> |
 <%= link_to 'Back', events_path %>
-  </div>
