--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,28 +8,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
   </head>
 
+<!-- <img src="vc.jpg"> -->
+
 <div class="container p-5 my-5 bg-light text-dark">
   <h1 class="text-center"> Volunteer Connect</h1>
-<!--   <div class="row">
-    <div class="col">
-    </div>
-    <div class="col">
-    </div>
-    <div class="col text-center">
-      <a href = "https://spark-small-3000.codio.io/events" type = "button" class = "btn btn-primary">Find an Event</a>
-    </div>
-    <div class="col text-center">
-      <a href = "https://spark-small-3000.codio.io/organizations" type = "button" class = "btn btn-primary">Browse Organizations</a>
-    </div>
-    <div class="col">
-    </div>
-    <div class="col">
-    </div>
-  </div> -->
   <div class="text-center">
-    <a href = "https://spark-small-3000.codio.io/events" type = "button" class = "btn btn-primary p-3 mr-5">Find an Event</a>
-    <a href = "https://spark-small-3000.codio.io/organizations" type = "button" class = "btn btn-primary p-3 ml-5">Browse Organizations</a>
-    </div>
+    <a class="btn btn-primary p-3 mr-5" href="https://spark-small-3000.codio.io/events" role="button">Find an Event</a>
+    <a class="btn btn-primary p-3 mr-5" href="https://spark-small-3000.codio.io/organizations" role="button">Browse Organizations</a>
+  </div>
   
   
 </div>
