--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -14,6 +14,7 @@
   <div class="field row my-2 pt-2" >
     <div class="col-sm-2">
       <%= form.label :name %>
+      <font color ="red">*</font>
     </div>
     <div class="col-sm-10">
       <%= form.text_field :name %>
@@ -62,16 +63,18 @@
   <div class="field row my-2 pt-2" >
     <div class="col-sm-2">
       <%= form.label :link %>
+      <font color ="red">*</font>
     </div>
     <div class="col-sm-10">
       <%= form.text_field :link %>
     </div>
   </div>
 
-  <div clas
-       s="field row my-2 pt-2" >
+  <div class="field row my-2 pt-2" >
     <div class="col-sm-2">
+      <button type="button" class="btn btn-primary">
       <%= form.submit %>
+      </button>
     </div>
 
   </div>
