--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -27,7 +27,7 @@
   <tbody>
     <% @events.each do |event| %>
       <tr>
-        <td><%= event.name %></td>
+        <td><%= link_to "#{event.name}", "#{event.link}" %></td>
  <!--       <td><%= event.description %></td> -->
         <td><%= event.date %></td>
         <td><%= event.start_time %></td>
@@ -40,7 +40,7 @@
     <% end %>
   </tbody>
 </table>
-
-<br>
-
 <%= link_to 'New Event', new_event_path %>
+  </div>
+
+
