--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,11 +7,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
   </head>
+<body>
+  
 
-<!-- <img src="vc.jpg"> -->
+<center class = "container p-5">
+  <img src="https://spark-small.codio.io/Volunteer/app/views/home/vc.jpg" class = "aligncenter">
+</center>
 
 <div class="container p-5 my-5 bg-light text-dark">
-  <h1 class="text-center"> Volunteer Connect</h1>
+  
+  <h1 class="text-center">Welcome to Volunteer Connect</h1>
   <div class="text-center">
     <a class="btn btn-primary p-3 mr-5" href="https://spark-small-3000.codio.io/events" role="button">Find an Event</a>
     <a class="btn btn-primary p-3 mr-5" href="https://spark-small-3000.codio.io/organizations" role="button">Browse Organizations</a>
@@ -19,4 +24,6 @@
   
   
 </div>
+
+</body>
 </html>
