--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,10 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+<script src="js/jquery-3.2.1.min.js"></script>
+<script src="js/fontawesome-all.min.js"></script>
+<link href="https://use.fontawesome.com/releases/v5.0.4/css/all.css" rel="stylesheet">
   </head>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#"></a>
@@ -26,5 +30,32 @@
     <%= yield %>
   </body>
   
+  <footer class="bg-light text-center text-lg-start">
+  <!-- Grid container -->
+  <div class="container p-4">
+    <!--Grid row-->
+    <div class="row">
+      <!--Grid column-->
+      <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+        <h5 class="text-uppercase">Volunteer Connect</h5>
+
+        <p>
+          If you need support or want to see improvements to the site, feel free
+          to message the developers! 
+        </p>
+        <p>
+            <i class="fas fa-inbox me-3"></i>
+            gdarley@tulane.edu
+          </p>
+        <p><i class="fas fa-map-marker-alt me-3"></i> 6823 St. Charles Ave, New Orleans, LA 70118</p>
+      </div>
+      <!--Grid column-->
+
+    </div>
+    <!--Grid row-->
+  </div>
+  <!-- Grid container -->
+
+</footer>
   
 </html>
