--- a/app/views/organizations/_form.html.erb
+++ b/app/views/organizations/_form.html.erb
@@ -15,6 +15,7 @@
   <div class="field row my-2 pt-2" >
     <div class="col-sm-2">
       <%= form.label :name %>
+      <font color ="red">*</font>
     </div>
     <div class="col-sm-10">
       <%= form.text_field :name %>
@@ -35,6 +36,7 @@
   <div class="field row my-2 pt-2" >
     <div class="col-sm-2">
       <%= form.label :web_address %>
+      <font color ="red">*</font>
     </div>
     <div class="col-sm-10">
       <%= form.text_field :web_address %>
@@ -66,6 +68,7 @@
   <div class="field row my-2 pt-2" >
     <div class="col-sm-2">
       <%= form.label :category %>
+      <font color ="red">*</font>
     </div>
     <div class="col-sm-10">
       <%= form.text_field :category %>
