Fixed footer to bottom

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
     <%= yield %>
   </body>
   
-  <footer class="bg-light text-center text-lg-start">
+  <div class="footer fixed-bottom">
   <!-- Grid container -->
   <div class="container p-4">
     <!--Grid row-->
@@ -56,6 +56,6 @@
   </div>
   <!-- Grid container -->
 
-</footer>
+</div>
   
 </html>
