--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,30 +29,25 @@
   <body>
     <%= yield %>
   </body>
-  
-  <div class="footer fixed-bottom">
+  <div>
+    
+  </div>
+  <div class="footer ">
   <!-- Grid container -->
-  <div class="container p-4">
-    <!--Grid row-->
-    <div class="row">
-      <!--Grid column-->
-      <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
-        <h5 class="text-uppercase">Volunteer Connect</h5>
+  <div class="container-fluid p-4 bg-light">
+  <div class = "container">
+    <h5 class="text-uppercase">Volunteer Connect</h5>
+      <p>
+        If you need support or want to see improvements to the site, feel free
+        to message the developers! 
+      </p>
+      <p>
+        <i class="fas fa-inbox me-3"></i>
+        gdarley@tulane.edu
+      </p>
+    <p><i class="fas fa-map-marker-alt me-3"></i> 6823 St. Charles Ave, New Orleans, LA 70118</p>
+  </div>
 
-        <p>
-          If you need support or want to see improvements to the site, feel free
-          to message the developers! 
-        </p>
-        <p>
-            <i class="fas fa-inbox me-3"></i>
-            gdarley@tulane.edu
-          </p>
-        <p><i class="fas fa-map-marker-alt me-3"></i> 6823 St. Charles Ave, New Orleans, LA 70118</p>
-      </div>
-      <!--Grid column-->
-
-    </div>
-    <!--Grid row-->
   </div>
   <!-- Grid container -->
 
