--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,6 @@
  *= require_tree .
  *= require_self
  */
+*= require bootstrap-datepicker
+@import "bootstrap";
+@import "tempusdominus-bootstrap-4.css"
