--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -33,30 +33,30 @@
   <div class="field row my-2 pt-2" >
     <div class="col-sm-2">
       <%= form.label :date %>
-      <%= form.label :date, "(MM/DD/YYYY)" %>
+<!--       <%= form.label :date, "(MM/DD/YYYY)" %> -->
     </div>
     <div class="col-sm-10">
-      <%= form.text_field :date %>
+      <%=form.date_field :date %>
     </div>
   </div>
 
   <div class="field row my-2 pt-2" >
     <div class="col-sm-2">
       <%= form.label :start_time %>
-      <%= form.label :start_time, "(XX:XX)" %>
+<!--       <%= form.label :start_time, "(XX:XX)" %> -->
     </div>
     <div class="col-sm-10">
-      <%= form.text_field :start_time %>
+      <%= form.time_field :start_time %>
     </div>
   </div>
 
   <div class="field row my-2 pt-2" >
     <div class="col-sm-2">
       <%= form.label :end_time %>
-      <%= form.label :end_time, "(XX:XX)" %>
+<!--       <%= form.label :end_time, "(XX:XX)" %> -->
     </div>
     <div class="col-sm-10">
-      <%= form.text_field :end_time %>
+      <%= form.time_field :end_time %>
     </div>
   </div>
 
